--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "name": "Run Toy Model",
+            "type": "python",
+            "request": "launch",
+            "module": "run_toy"
+        },
         {
             "name": "Python: Current File",
             "type": "python",
