--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,6 @@ dmypy.json
 venders/
 .vscode/settings.json
 **/~$*.xlsx
+
+# this file  is auto-generated from converters
+data/trehalose/BIOMD0000000380_url.py
