--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ venders/
 # this file  is auto-generated from converters
 data/trehalose/BIOMD0000000380_url.py
 examples/**/*.npy
+**/*~
+Pipfile.lock
