--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,10 @@ verify_ssl = true
 jupyterlab = "*"
 pylint = "*"
 rope = "*"
-pyqt5 = "*"
 yapf = "*"
-pyadapt = {editable = true,path = "."}
+scikit-learn = "*"
+pyqt5 = "==5.12.3"
+pyqt5-tools = "==5.12.3.1.5"
 
 [packages]
 pyadapt = {editable = true,path = "."}
