add launch file to debug module pyADAPT

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: analyze trehalose",
+            "type": "python",
+            "request": "launch",
+            "module": "pyADAPT",
+            "args": [
+                "analyze",
+                "-f",
+                "data/trehalose/smallbone.xml",
+                "-p",
+                "hxt/Vmax",
+                "hxt/Kglc"
+            ]
+        },
+        {
             "name": "Run Toy Model",
             "type": "python",
             "request": "launch",
