--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,8 @@ pylint = "*"
 rope = "*"
 yapf = "*"
 scikit-learn = "*"
-pyqt5 = "==5.12.3"
-pyqt5-tools = "==5.12.3.1.5"
+pyqt5 = "*"
+spyder = "*"
 
 [packages]
 pyadapt = {editable = true,path = "."}
