add py-spy to dev dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ snakeviz = "*"
 pyadapt = {editable = true,path = "."}
 tables = "*"
 pydoe = "*"
+py-spy = "*"
 
 [requires]
 python_version = "3.7"
