add spyder-kernels as dev dependency.
Although spyder sometimes crashes, it's debug tools are quite handy

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pysnooper = "*"
 vprof = "*"
 snakeviz = "*"
 py-spy = "*"
+spyder-kernels = "*"
 
 [packages]
 pyadapt = {editable = true,path = "."}
