add libroadrunner to dependency for support of SBML

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ spyder-kernels = "*"
 pyadapt = {editable = true,path = "."}
 tables = "*"
 pydoe = "*"
+libroadrunner = "*"
 
 [requires]
 python_version = "3.7"
