add ipympl for interactive plotting in jupyter

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ snakeviz = "*"
 py-spy = "*"
 spyder-kernels = "*"
 ipyparallel = "*"
+ipympl = "*"
 
 [packages]
 pyadapt = {editable = true,path = "."}
