--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pyqt5-tools = "==5.12.*"
 
 [packages]
 pyadapt = {editable = true,path = "."}
